# Chrome-Flash-Edition

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
benches/view/: draw_buffer.rs
documentation/: mkdocs.yml  quick_start_guide
documentation/pages/: configuration.md  index.md  installation.md  usage.md
snap/: snapcraft.yaml
src/: errors.rs  lib.rs  main.rs
src/commands/: application.rs  buffer.rs  confirm.rs  cursor.rs  git.rs  jump.rs  line_jump.rs  mod.rs  path.rs  preferences.rs  search.rs  search_select.rs  selection.rs  view.rs  workspace.rs
src/input/: mod.rs
src/input/key_map/: default.yml  mod.rs
src/models/application/: clipboard.rs  event.rs  mod.rs
src/models/application/modes/: insert.rs  mod.rs  path.rs  search.rs  search_select.rs  select_line.rs  symbol_jump.rs  syntax.rs  theme.rs
src/models/application/modes/jump/: mod.rs  (+2 more)
src/presenters/: error.rs  mod.rs
src/presenters/modes/: confirm.rs  insert.rs  jump.rs  line_jump.rs  normal.rs  path.rs  search.rs  search_select.rs  select.rs  select_line.rs
src/themes/: solarized_dark.tmTheme  solarized_light.tmTheme
src/util/: mod.rs  movement_lexer.rs  reflow.rs  selectable_vec.rs  token.rs
src/view/: event_listener.rs  mod.rs  presenter.rs  style.rs  theme_loader.rs
src/view/buffer/: lexeme_mapper.rs  line_numbers.rs  mod.rs  render_cache.rs  render_state.rs  renderer.rs  scrollable_region.rs
src/view/color/: colors.rs  map.rs  mod.rs
src/view/terminal/: buffer.rs  buffer_iterator.rs  cell.rs  mod.rs  termion_terminal.rs  test_terminal.rs
(+7 files in other folders)
