[package]

name = "amp"
version = "0.6.2"
authors = ["Jordan MacDonald <jordan@wastedintelligence.com>"]
description = "A complete text editor for your terminal."
homepage = "https://amp.rs"
repository = "https://github.com/jmacdonald/amp"
documentation = "https://amp.rs/docs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["text", "editor", "terminal", "modal"]
edition="2018"

[build-dependencies]
regex = "1.3.4"

[dependencies]
app_dirs = "1.2.1"
scribe = "0.7.2"
bloodhound = "0.5.4"
lut